--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "contatooh",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/ricardomachadosb/contatooh",
   "dependencies": {
+    "ejs": "^0.8.8",
     "express": "^4.8.8"
   }
 }
