--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/ricardomachadosb/contatooh",
   "dependencies": {
+    "body-parser": "^1.6.7",
     "ejs": "^0.8.8",
     "express": "^4.8.8",
-    "express-load": "^1.1.14"
+    "express-load": "^1.1.14",
+    "method-override": "^2.1.3"
   }
 }
